syntax = "proto3";
option csharp_namespace = "Ozon.Route256.Practice.OrdersService";

import "google/protobuf/timestamp.proto";

service Orders {
  rpc CancelOrder(CancelRequest) returns (CancelResponse);
  rpc GetStatusById(GetStatusByIdRequest) returns (GetStatusByIdResponse);
  rpc GetRegions(Empty) returns (GetRegionsResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrdersAggregation(GetOrdersAggregationRequest) returns (GetOrdersAggregationResponse);
  rpc GetClientOrders(GetClientOrdersRequest) returns (GetClientOrdersResponse);
}

message Empty {}

message CancelRequest {
  int64 id = 1;
}

message CancelResponse {
  bool is_success = 1;
  string error = 2;
}

message GetStatusByIdRequest {
  int64 id = 1;
}

message GetStatusByIdResponse {
  Order.OrderState state = 1;
}

message GetRegionsResponse {
  repeated string regions = 1;
}

message GetOrdersRequest {
  string region_filter = 1;
  Order.OrderType order_type_filter = 2;
  PagingRequest page = 3;
  SortType sort = 4;
  
  enum SortType {
    NONE = 0;
    ASCENDING = 1;
    DESCENDING = 2;
  }
}

message GetOrdersResponse {
  repeated Order orders = 1;
}

message GetOrdersAggregationRequest {
  google.protobuf.Timestamp from_date = 1;
  repeated string regions = 2;
}

message GetOrdersAggregationResponse {
  repeated GetOrdersAggregationResponseEntry aggregations = 1;
  
  message GetOrdersAggregationResponseEntry {
    string region = 1;
    int32 orders_count = 2;
    double total_orders_sum = 3;
    double total_orders_weight = 4;
    int32 unique_clients_count = 5;
  }
}

message GetClientOrdersRequest {
  int64 client_id = 1;
  google.protobuf.Timestamp from = 2;
  PagingRequest page = 3;
}

message GetClientOrdersResponse {
  repeated Order orders = 1;
}

message PagingRequest {
  int64 skip_count = 1;
  int64 take_count = 2;
}

message Order {
  int64 id = 1;
  int32 count = 2;
  double total_sum = 3;
  double total_weight = 4;
  OrderType type = 5;
  google.protobuf.Timestamp created_at = 6;
  string region_from = 7;
  OrderState state = 8;
  string client_name = 9;
  Address order_address = 10;
  string phone = 11;
  
  enum OrderType 
  {
    UNDEFINED_TYPE = 0;
    FIRST_TYPE = 1;
    SECOND_TYPE = 2;
  }
  
  enum OrderState
  {
    UNDEFINED_STATE = 0;
    CREATED = 1;
    SENT_TO_CUSTOMER = 2;
    DELIVERED = 3;
    LOST = 4;
    CANCELLED = 5;
  }

  message Address {
    string region = 1;
    string city = 2;
    string street = 3;
    string building = 4;
    string apartment = 5;
    double latitude = 6;
    double longitude = 7;
  }
}